# upload-config-action

./: Dockerfile  README.md  action.yml  pyproject.toml
.github/workflows/: test-action.yml
cognite/config_upload/: __main__.py
