[tool.poetry]
name = "upload-config-action"
version = "0.1.0"
description = "Github action to upload configs to Cognite Data Fusion"
authors = ["Einar Marstrander Omang <einar.omang@cognite.com>"]
license = "Apache-2.0"

packages = [
    { include="cognite", from="." },
]

[tool.poetry.scripts]
upload = "cognite.config_upload.__main__:main"

[tool.poetry.dependencies]
python = "^3.9"
cognite-sdk-experimental = "^0.76.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
