[tool.poetry]
name = "upload-config-action"
version = "0.1.0"
description = "Github action to upload configs to Cognite Data Fusion"
authors = ["Einar Marstrander Omang <einar.omang@cognite.com>"]
license = "Apache-2.0"

packages = [
    { include="cognite", from="." },
]

[tool.ruff]
exclude = [".git", ".mypy_cache", ".ruff_cache"]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "I", "S", "FAST",  "DTZ", "W", "LOG", "ASYNC", "RUF",
    "A", "C",
]
ignore = ["S104", "C901"]
fixable = ["A", "B", "C", "D", "E", "F", "I", "UP"]
unfixable = []

[tool.poetry.scripts]
upload = "cognite.config_upload.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
cognite-sdk = "^5.4.4"

[tool.poetry.dev-dependencies]
mypy = "^1.0"
ruff = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
